--- a/pet-clinic-web/src/main/resources/templates/Owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/Owners/index.html
@@ -5,6 +5,24 @@
     <title>List of Pet Owners</title>
 </head>
 <body>
+<!--/*@thymesVar id="owner" type="guru.springframework.sfgpetclinic.model.Owner"*/-->
 <h1 th:text="'List of Owners'">List of Owners</h1>
+
+<table>
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="owner : ${owners}">
+        <th th:text="${owner.id}">1</th>
+        <th th:text="${owner.firstName}">Joe</th>
+        <th th:text="${owner.lastName}">Bock</th>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
